--- a/solutions/day-02/index.html
+++ b/solutions/day-02/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>30DaysOfJavaScript</title>
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>30 Days Of React Challenge</title>
+  </head>
 
-    <body>
-        <script
-        crossorigin
-        src="https://unpkg.com/react@16/umd/react.development.js"
-      ></script>
-      <script
-        crossorigin
-        src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
-      ></script>
-      <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-        <script src="./day2.js"></script>
-    </body>
+  <body>
+    <div class="root"></div>
+
+    <script
+      crossorigin
+      src="https://unpkg.com/react@16/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+    ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
+      // To get the root element from the HTML document
+      const rootElement = document.querySelector('.root')
+
+      // JSX element
+      const jsxElement = <h1>I am a JSX element</h1>
+
+      // we render the JSX element using the ReactDOM package
+      // ReactDOM has the render method and the render method takes two argument
+      ReactDOM.render(jsxElement, rootElement)
+    </script>
+  </body>
 </html>
